RG-1161 fix missed spacing between alerts
Former-commit-id: de23776e332d0f336ee8236921b79f20457e78f5

--- a/components/alert/container.css
+++ b/components/alert/container.css
@@ -1,4 +1,5 @@
 @value unit, alert-z-index from '../global/global.css';
+@value alert from './alert.css';
 
 .alertContainer {
   position: fixed;
@@ -17,6 +18,7 @@
 }
 
 .alertInContainer {
+  composes: alert;
   width: calc(unit * 55);
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
   margin-bottom: 0;
